# colpali-cookbooks

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
examples/: finetune_colpali.ipynb  gen_colpali_similarity_maps.ipynb  gen_colqwen2_similarity_maps.ipynb  run_e2e_rag_colqwen2_with_adapter_hot_swapping.ipynb  use_native_colpali_from_transformers.ipynb  use_transformers_native_colpali.ipynb  use_transformers_native_colqwen2.ipynb
skypilot/a100/: config.yaml
skypilot/a100_80gb/: config.yaml
