[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
include = ["examples"]

[project]
name = "colpali_cookbooks"
dynamic = ["version"]
description = "Recipes for learning, fine-tuning, and adapting ColPali to your multimodal RAG use cases."
authors = [{ name = "Tony Wu", email = "tony.wu@live.fr" }]
maintainers = [{ name = "Tony Wu", email = "tony.wu@live.fr" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "colpali-engine[train]>=0.3.0,<0.4.0",
    "datasets",
    "huggingface_hub",
    "ipykernel",
    "vidore-benchmark[interpretability]>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = ["nvitop", "pytest>=8.2.1", "ruff>=0.4.5"]
skypilot = ["skypilot==0.6.1,<1.0.0"]

all = ["colpali-cookbooks[dev]", "colpali-cookbooks[skypilot]"]

[project.urls]
homepage = "https://github.com/tonywu71/colpali-cookbooks"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
